refactor: Array for breadcrumbs

--- a/server/public/react.html
+++ b/server/public/react.html
@@ -43,7 +43,7 @@
       <div id="breadcrumbs-wrapper">
         <div
           id="breadcrumbs"
-          data-breadcrumbs='[{ "text": "Home", "link": "./index.html" }, { "text": "Widgets (React)" }]'
+          data-breadcrumbs='[["Home", "./index.html"], ["Widgets (React)"]]'
         >
           Home &gt;
         </div>
