--- a/server/public/solid.html
+++ b/server/public/solid.html
@@ -43,7 +43,7 @@
       <div id="breadcrumbs-wrapper">
         <breadcrumbs-widget
           id="breadcrumbs"
-          data-breadcrumbs='[{ "text": "Home", "link": "./index.html" }, { "text": "Widgets (SolidJS)" }]'
+          data-breadcrumbs='[["Home", "./index.html"], ["Widgets (SolidJS)"]]'
           >Home &gt;</breadcrumbs-widget
         >
       </div>
