--- a/server/public/solid.html
+++ b/server/public/solid.html
@@ -62,48 +62,38 @@
             <h1>(Solid) FAUST "FIRST PART OF THE TRAGEDY"</h1>
 
             <div class="text-gray-500 text-2xl">
-              (Try having <span class="font-bold text-red-400">View-Source</span> on this page)
+              (Try having
+              <span class="font-bold text-red-400">View-Source</span> on this
+              page)
             </div>
 
             <div class="mt-4">
-I've studied now Philosophy
-And Jurisprudence, Medicine,
-And even, alas! Theology,
-From end to end, with labor keen;
-And here, poor fool! with all my lore
-I stand, no wiser than before:
-I'm Magister—yea, Doctor—hight,
-And straight or cross-wise, wrong or right,
-These ten years long, with many woes,
-I've led my scholars by the nose,
-And see, that nothing can be known!
-That knowledge cuts me to the bone.
+              I've studied now Philosophy And Jurisprudence, Medicine, And even,
+              alas! Theology, From end to end, with labor keen; And here, poor
+              fool! with all my lore I stand, no wiser than before: I'm
+              Magister—yea, Doctor—hight, And straight or cross-wise, wrong or
+              right, These ten years long, with many woes, I've led my scholars
+              by the nose, And see, that nothing can be known! That knowledge
+              cuts me to the bone.
             </div>
 
             <div class="mt-4">
-I'm cleverer, true, than those fops of teachers,
-Doctors and Magisters, Scribes and Preachers;
-Neither scruples nor doubts come now to smite me,
-Nor Hell nor Devil can longer affright me.
-For this, all pleasure am I foregoing;
+              I'm cleverer, true, than those fops of teachers, Doctors and
+              Magisters, Scribes and Preachers; Neither scruples nor doubts come
+              now to smite me, Nor Hell nor Devil can longer affright me. For
+              this, all pleasure am I foregoing;
             </div>
 
             <div class="mt-4">
-I do not pretend to aught worth knowing,
-I do not pretend I could be a teacher
-To help or convert a fellow-creature.
-Then, too, I've neither lands nor gold,
-Nor the world's least pomp or honor hold—
-No dog would endure such a curst existence!
-Wherefore, from Magic I seek assistance,
-That many a secret perchance I reach
-Through spirit-power and spirit-speech,
-And thus the bitter task forego
-Of saying the things I do not know,—
-That I may detect the inmost force
-Which binds the world, and guides its course;
-Its germs, productive powers explore,
-And rummage in empty words no more!
+              I do not pretend to aught worth knowing, I do not pretend I could
+              be a teacher To help or convert a fellow-creature. Then, too, I've
+              neither lands nor gold, Nor the world's least pomp or honor hold—
+              No dog would endure such a curst existence! Wherefore, from Magic
+              I seek assistance, That many a secret perchance I reach Through
+              spirit-power and spirit-speech, And thus the bitter task forego Of
+              saying the things I do not know,— That I may detect the inmost
+              force Which binds the world, and guides its course; Its germs,
+              productive powers explore, And rummage in empty words no more!
             </div>
           </div>
 
@@ -111,19 +101,21 @@ And rummage in empty words no more!
             <h1>(Solid) ファウスト「悲壮劇の第一部」</h1>
 
             <div class="text-gray-500 text-2xl">
-              (このページで <span class="font-bold text-red-400">View-Source</span> をしてみて下さい)
+              (このページで
+              <span class="font-bold text-red-400">View-Source</span>
+              をしてみて下さい)
             </div>
 
             <div class="mt-4">
-はてさて、己は哲学も法学も医学もあらずもがなの神学も熱心に勉強して、底の底まで研究した。そうしてここにこうしている。気の毒な、馬鹿な己だな。そのくせなんにもしなかった昔より、ちっともえらくはなっていない。マギステルでござるの、ドクトルでござるのと学位倒れで、もう彼此十年が間、弔り上げたり、引き卸したり、竪横十文字に、学生どもの鼻柱を撮まんで引き廻している。そして己達に何も知れるものでないと、己は見ているのだ。それを思えば、ほとんどこの胸が焦げそうだ。
+              はてさて、己は哲学も法学も医学もあらずもがなの神学も熱心に勉強して、底の底まで研究した。そうしてここにこうしている。気の毒な、馬鹿な己だな。そのくせなんにもしなかった昔より、ちっともえらくはなっていない。マギステルでござるの、ドクトルでござるのと学位倒れで、もう彼此十年が間、弔り上げたり、引き卸したり、竪横十文字に、学生どもの鼻柱を撮まんで引き廻している。そして己達に何も知れるものでないと、己は見ているのだ。それを思えば、ほとんどこの胸が焦げそうだ。
             </div>
 
             <div class="mt-4">
-勿論世間でドクトルだ、マギステルだ、学者だ、牧師だと云う、一切の馬鹿者どもに較べれば、己の方が気は利いている。己は疑惑に悩まされるようなことはない。地獄も悪魔もこわくはない。その代り己には一切の歓喜がなくなった。
+              勿論世間でドクトルだ、マギステルだ、学者だ、牧師だと云う、一切の馬鹿者どもに較べれば、己の方が気は利いている。己は疑惑に悩まされるようなことはない。地獄も悪魔もこわくはない。その代り己には一切の歓喜がなくなった。
             </div>
 
             <div class="mt-4">
-一廉の事を知っていると云う自惚もなく、人間を改良するように、済度するように、教えることが出来ようと云う自惚もない。それに己は金も品物も持っていず、世間の栄華や名聞も持っていない。この上こうしていろと云ったら、狗もかぶりを振るだろう。それで霊の威力や啓示で、いくらか秘密が己に分かろうかと思って、己は魔法に這入った。その秘密が分かったら、辛酸の汗を流して、うぬが知らぬ事を人に言わいでも済もうと思ったのだ。一体この世界を奥の奥で統べているのは何か。それが知りたい。そこで働いている一切の力、一切の種子は何か。それが見たい。それを知って、それを見たら、無用の舌を弄せないでも済もうと思ったのだ。
+              一廉の事を知っていると云う自惚もなく、人間を改良するように、済度するように、教えることが出来ようと云う自惚もない。それに己は金も品物も持っていず、世間の栄華や名聞も持っていない。この上こうしていろと云ったら、狗もかぶりを振るだろう。それで霊の威力や啓示で、いくらか秘密が己に分かろうかと思って、己は魔法に這入った。その秘密が分かったら、辛酸の汗を流して、うぬが知らぬ事を人に言わいでも済もうと思ったのだ。一体この世界を奥の奥で統べているのは何か。それが知りたい。そこで働いている一切の力、一切の種子は何か。それが見たい。それを知って、それを見たら、無用の舌を弄せないでも済もうと思ったのだ。
             </div>
           </div>
         </translate-content-widget>
@@ -131,8 +123,7 @@ And rummage in empty words no more!
     </div>
 
     <div id="footer-wrapper">
-      <footer-widget id="footer">
-      </footer-widget>
+      <footer-widget id="footer"> </footer-widget>
     </div>
 
     <script src="build/widget.solid.runtime.js"></script>
