fix: Wrong title

--- a/server/public/react.html
+++ b/server/public/react.html
@@ -55,7 +55,7 @@
         <div data-translate-content class="hidden">
           <!-- BEGIN: data-lang-en -->
           <div data-lang-en>
-            <h1>(Solid) FAUST "FIRST PART OF THE TRAGEDY"</h1>
+            <h1>(React) FAUST "FIRST PART OF THE TRAGEDY"</h1>
 
             <div class="text-gray-500 text-2xl">
               (Try having
